--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8088
+#server.port=8088
 spring.thymeleaf.cache=false
 #spring.datasource.url=jdbc:h2:file:E:/stackjava/testdb
 spring.datasource.url=jdbc:h2:mem:student_mn
@@ -13,3 +13,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
+
+spring.messages: Hello Welcome from Pro
+
+server.port: 9090
